--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Skills Set</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">I am a curious, dynamic and resourceful woman with the dream to help people be friends with technology. I strongly believe that to create the next generation of technologies and services, we need to bridge, or better said to merge the physical, human world and the digital, machine world via a reliable relationship of trust and efficiency. In that perspective, I studied and acquired a broad range of competences matching my three passions: Art, Science and People.</h3>
           </div>
         </div>
         <div class="row text-center">
@@ -329,7 +329,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Your Website 2018</span>
+            <span class="copyright">Copyright &copy; Laura's Website 2018</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
