add descritpive text of each special skill domains

--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
               <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Interaction Design</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">UX/UI Design
+            <br>Design Thinking
+            <br>Contextual Design
+            <br>HCI Research</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -91,7 +94,11 @@
               <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Engineering & Programming</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">Front-end development
+            <br>Machine Learning
+            <br>Data Mining
+            <br>Cyber Security
+        	<br>Problem solving mindset</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -99,7 +106,10 @@
               <i class="fa fa-line-chart fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Business & Innovation</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">Marketing
+            <br>Entrepreneurship
+            <br>Innovation strategy
+            <br>Project management</p>
           </div>
         </div>
       </div>
