add descriptive text to education + remove privacy policy in Footer

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <h4>Be Part
-                    <br>Of Our
+                    <br>Of Your
                     <br>Story!</h4>
                 </div>
               </li>
@@ -300,7 +300,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Scholar Curiculum</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">In August 2018, I will graduate from my joint master degree program in ICT innovation - Human Computer Interaction and Design, specialized in Advanced User Modelling with KTH and Aalto.</h3>
           </div>
         </div>
         <div class="row">
@@ -328,7 +328,7 @@
         </div>
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+            <p class="large text-muted">I will also receive the EIT Digital Master School certificate along with the Eurecom certificate. In addition, I was awarded a project management certificate in 2016.</p>
           </div>
         </div>
       </div>
@@ -338,10 +338,7 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Laura's Website 2018</span>
-          </div>
-          <div class="col-md-4">
+          <div class="col-md-12">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="mailto:laura.deleuze@aalto.fi">
@@ -360,15 +357,10 @@
               </li>
             </ul>
           </div>
-          <div class="col-md-4">
-            <ul class="list-inline quicklinks">
-              <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">Terms of Use</a>
-              </li>
-            </ul>
+        </div>
+        <div class="row"  style="padding-top: 10px;">
+        	<div class="col-md-12">
+            <span class="copyright">Copyright &copy; Laura's Website 2018</span>
           </div>
         </div>
       </div>
