--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Skills Set</h2>
-            <h3 class="section-subheading text-muted">I am a curious, dynamic and resourceful woman with the dream to help people be friends with technology. I strongly believe that to create the next generation of technologies and services, we need to bridge, or better said to merge the physical, human world and the digital, machine world via a reliable relationship of trust and efficiency. In that perspective, I studied and acquired a broad range of competences matching my three passions: Art, Science and People.</h3>
+            <h3 class="section-subheading text-muted" style="font-style: normal">I am a curious, dynamic and resourceful woman with the dream to help people be friends with technology. I strongly believe that to create the next generation of technologies and services, we need to bridge, or better said to merge the physical, human world and the digital, machine world via a reliable relationship of trust and efficiency. In that perspective, I studied and acquired a broad range of competences matching my three passions: Art, Science and People.</h3>
           </div>
         </div>
         <div class="row text-center">
@@ -132,11 +132,12 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/junction-logo.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Threads</h4>
-              <p class="text-muted">Illustration</p>
+              <h4>Muvie</h4>
+              <p class="text-muted">Junction challenge winner: Choose a movie based on listened music</p>
+              <p class="text-muted normal5">#UX #DesignThinking #MachineLearning</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -146,11 +147,12 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/sunnyexpress.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Explore</h4>
-              <p class="text-muted">Graphic Design</p>
+              <h4>Sunny Express</h4>
+              <p class="text-muted">Dynamic Web App: Choose your ideal holiday location based on weather</p>
+              <p class="text-muted normal5">#UX #UI #DesignThinking #WebProgramming</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -160,11 +162,12 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/instore.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Finish</h4>
-              <p class="text-muted">Identity</p>
+              <h4>In Store Revolution</h4>
+              <p class="text-muted">Design of a system enhancing the retail store fitting room experience</p>
+              <p class="text-muted normal5">#UX #UI #DesignThinking</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -174,11 +177,12 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/health.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Lines</h4>
-              <p class="text-muted">Branding</p>
+              <h4>Domus Curae</h4>
+              <p class="text-muted">Startup built around remote regular check-ups for elderly patients</p>
+              <p class="text-muted normal5">#UX #DesignThinking #BusinessModel #StartupPitch</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -188,11 +192,12 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/groovybee.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Southwest</h4>
-              <p class="text-muted">Website Design</p>
+              <h4>GroovyBee</h4>
+              <p class="text-muted">Experimental project on automatic classical music generation</p>
+              <p class="text-muted normal5">#Music #DeepLearning #LSTM</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -202,11 +207,12 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/skids.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Window</h4>
-              <p class="text-muted">Photography</p>
+              <h4>Skids</h4>
+              <p class="text-muted">Startup built around enhanced children security in outdoors activities in kindergarten</p>
+              <p class="text-muted normal5">#LeanStartup #BusinessModel #StartupPitch</p>
             </div>
           </div>
         </div>
