--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <h4 class="subheading">IT Assistant at Clinic Pasteur</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">I contributed to the deployment of the software Diane improving the quality and conformity of pre surgery check-ups, thier transmissions and follow ups, including the training of doctors and medical staff on how to use the tool efficiently on a daily basis.</p>
+                    <p class="text-muted">I contributed to the deployment of the software Diane improving the quality and conformity of pre surgery check-ups, their transmissions and follow ups, including the training of doctors and medical staff on how to use the tool efficiently on a daily basis.</p>
                   </div>
                 </div>
               </li>
