remove background color for timeline with picture

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 </div>
               </li>
               <li class="timeline-inverted">
-                <div class="timeline-image">
+                <div class="timeline-image timeline-end">
                   <h4>Be Part
                     <br>Of Your
                     <br>Story!</h4>
