--- a/index.html
+++ b/index.html
@@ -404,12 +404,22 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Muvie</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/junction-logo.png" alt="">
+                  <div class="row">
+                    <div class="col-4">
+                      <img class="img-fluid d-block mx-auto" src="img/portfolio/junction-logo.png" alt="">
+                    </div>
+                    <div class="col-4">
+                      <img class="img-fluid d-block mx-auto" src="img/portfolio/muvie.jpg" alt="">
+                    </div>
+                    <div class="col-4">
+                      <img class="img-fluid d-block mx-auto" src="img/portfolio/muvie-team.jpg" alt="">
+                    </div>
+                  </div>
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Threads</li>
-                    <li>Category: Illustration</li>
+                    <li>Date: November 2017</li>
+                    <li>Client: Elisa</li>
+                    <li>Category: Hackathon</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
