update muvie modal description

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Work Experiences</h2>
-            <h3 class="section-subheading text-muted">Here is a list of jobs and interneships I completed during my studies. More details can be found on my <a href="https://fr.linkedin.com/in/laura-deleuze-5b7051b0" style="text-decoration:none">LinkedIn profile</a>.</h3>
+            <h3 class="section-subheading text-muted">Here is a list of jobs and interneships I completed during my studies. More details can be found on my <a target="_blank" href="https://fr.linkedin.com/in/laura-deleuze-5b7051b0" style="text-decoration:none">LinkedIn profile</a>.</h3>
           </div>
         </div>
         <div class="row">
@@ -320,7 +320,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Scholar Curiculum</h2>
-            <h3 class="section-subheading text-muted">In August 2018, I will graduate from my joint master degree program in ICT innovation - Human Computer Interaction and Design, specialized in Advanced User Modelling with KTH and Aalto. More details can be found on my <a href="https://fr.linkedin.com/in/laura-deleuze-5b7051b0" style="text-decoration:none">LinkedIn profile</a>.</h3>
+            <h3 class="section-subheading text-muted">In August 2018, I will graduate from my joint master degree program in ICT innovation - Human Computer Interaction and Design, specialized in Advanced User Modelling with KTH and Aalto. More details can be found on my <a target="_blank" href="https://fr.linkedin.com/in/laura-deleuze-5b7051b0" style="text-decoration:none">LinkedIn profile</a>.</h3>
           </div>
         </div>
         <div class="row">
@@ -371,7 +371,7 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://fr.linkedin.com/in/laura-deleuze-5b7051b0">
+                <a target="_blank" href="https://fr.linkedin.com/in/laura-deleuze-5b7051b0">
                   <i class="fa fa-linkedin"></i>
                 </a>
               </li>
@@ -403,7 +403,7 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Muvie</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <p class="item-intro text-muted">Muvie reads your mood from the music you are currently listening to and suggest you new movies to watch accordingly.</p>
                   <div class="row">
                     <div class="col-4">
                       <img class="img-fluid d-block mx-auto" src="img/portfolio/junction-logo.png" alt="">
@@ -415,11 +415,34 @@
                       <img class="img-fluid d-block mx-auto" src="img/portfolio/muvie-team.jpg" alt="">
                     </div>
                   </div>
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>Muvie is a web platform born during the Junction 48h Hackathon held at Aalto in November 2017. It is a story about music, cinema and experience conceived by our Happy Bee team as an answer to the challenge raised by Elisa: "My perfect personal movie experience".</p>
+                  <p>The idea or intial concept comes from our personal frustration as serie or movie consumers that, sometimes, we cannot find anything to watch. We cannot put words on what we actually want to see but rather we <i>feel</i> inclined to watch one video or not. Yet, such feelings can hardly be explained and heavily rely on our own perception or previous knowledge levels of the video content. But, what if we are looking for something new?</p>
+                  <p>Such annoying, desperate quests are well-known among the people we met, our friends and relatives. We all can spend ages deciding upon what movie to watch, thus ruining a significant part of our evening... Although, what does best translate our feelings, our emotional state than music? Muvie therefore became our tentative to match our mood from music to movies.</p>
+                  <p>To do so, we of course shared the building of our prototypes into several pieces. Omar and I designed and developed a smart algorihm extracting 8-dimensional vector representing the main emotional state translated by a song lyrics, tempo, loudness and dansability as well as by a movie summary and keywords. I also builds clusters of movies and eventually matches songs emotional vectors to a specific subset of movies to be suggested. In practice, our algorithm suggested horror and thriller movies to users listening to hard rock and rock songs while romantic comedy movies to pop songs addicts for instance. In addition, Shuang and I designed and built a simple, neat and user-friendly interface both enjoyable to look at and easy to undersand. Indeed, we included a feedback on our final interpretation of the user current mood as well as embodied trailer playing all together in our plateform.</p>
+                  <p>Muvie received numreous positive and enthousiastic feedbacks from all testers, be it Junctions judges or curious visitors. We ranked 3rd out of 20 projects in our track and won the Junction Challenge "My perfect personal movie experience by ELisa" thanks to our hardwork, our team effort and our passion!</p>
+                  <div class="row">
+                    <div class="col-md-12">
+                      
+                      <ul class="list-inline">
+                        <li class="list-inline-item"><h6>Read more on:</h6></li>
+                        <li class="list-inline-item">
+                          <a target="_blank" href="https://devpost.com/software/muvie">
+                            <img width="130" src="img/portfolio/devpost-logo.png" style="margin: 0px;">
+                          </a>
+                        </li>
+                        <li class="list-inline-item">
+                          <a target="_blank" href="https://github.com/HappyBee-Junction/muvie">
+                            <img width="130" src="img/portfolio/github-octocat.png" style="margin: 0px;">
+                          </a>
+                        </li>
+                        
+                      </ul>
+                    </div>
+                  </div>
                   <ul class="list-inline">
-                    <li>Date: November 2017</li>
-                    <li>Client: Elisa</li>
-                    <li>Category: Hackathon</li>
+                    <li><h6>Date: <span>November 2017</span></h6></li>
+                    <li><h6>Client: <span>Elisa</span></h6></li>
+                    <li><h6>Category: <span>UX, Design Thinking, Machine Learning</span></h6></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
