--- a/index.html
+++ b/index.html
@@ -414,7 +414,6 @@
                   <p>Muvie received numerous positive and enthusiastic feedbacks from all testers, be it Junctions judges or curious visitors. We ranked 3rd out of 20 projects in our track and won the Junction Challenge "My perfect personal movie experience by Elisa" thanks to our hard work, our team effort and our passion!</p>
                   <div class="row">
                     <div class="col-md-12">
-                      
                       <ul class="list-inline">
                         <li class="list-inline-item"><h6>Read more on:</h6></li>
                         <li class="list-inline-item">
@@ -465,10 +464,24 @@
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/sunnyexpress.png" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <iframe width="420" height="315" src="https://youtu.be/P3g2jfuZMts"></iframe> 
+                  <div class="row">
+                    <div class="col-md-12">
+                      <ul class="list-inline">
+                        <li class="list-inline-item"><h6>Read more on:</h6></li>
+                        <li class="list-inline-item">
+                          <a target="_blank" href="https://github.com/quimarnau/sunny-express">
+                            <img width="130" src="img/portfolio/github-octocat.png" style="margin: 0px;">
+                          </a>
+                        </li>
+                        
+                      </ul>
+                    </div>
+                  </div>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Explore</li>
-                    <li>Category: Graphic Design</li>
+                    <li><h6>Date: <span>Spring 2017</span></h6></li>
+                    <li><h6>Client: <span>KTH Course DH2642 - Interaction Programming and the Dynamic Web</span></h6></li>
+                    <li><h6>Category: <span>UX, UI, Design Thinking, Web Programming</span></h6></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
