Adding content to Suuny Express project

--- a/index.html
+++ b/index.html
@@ -461,10 +461,36 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Sunny Express</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <p class="item-intro text-muted">Have you ever been disappointed when, for these wonderful holidays you so longed for, you arrive to your favourite skiing station and there is no snow? Been so frustrated when you finally reach your dream windsurf spot and there is no wind? Or that you are unable to get a glimpse of the famous Northern lights because of those bloody clouds? Then SunnyExpress is for you!</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/sunnyexpress.png" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                  <iframe width="420" height="315" src="https://youtu.be/P3g2jfuZMts"></iframe> 
+                  <p>From a crazy idea I suggested in our brainstorming session around daily life pain relievers, our 4-people group designed and built this web-based application you can play with to find the best place to be according to your weather likings. We turned our course final project, pretext to display out newly acquired skills in Dynamic Web programming (here MVC architecture and Javascript/AngularJS) into this playful user-centred service experience.</p>
+                  <p>For this ambitious project, we integrated end-users’ feedbacks for the whole process: from the ideation phase through paper prototypes to a video presentation via increasingly detailed online prototypes to best mock final interactions.</p>
+                  <p>Basically, from these basic prototypes:</p>
+                  <div class="row">
+                    <div class="col-6 col-md-4">
+                      <img class="img-fluid d-block mx-auto" src="img/portfolio/View1.png" alt="">
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img class="img-fluid d-block mx-auto" src="img/portfolio/View2L.png" alt="">
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img class="img-fluid d-block mx-auto" src="img/portfolio/View2V.png" alt="">
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img class="img-fluid d-block mx-auto" src="img/portfolio/View4.png" alt="">
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img class="img-fluid d-block mx-auto" src="img/portfolio/View5.png" alt="">
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img class="img-fluid d-block mx-auto" src="img/portfolio/View6.png" alt="">
+                    </div>
+                  </div>
+                  <p>We built Sunny Express you can experience through the following Screencast:</p>
+                  <div class="videoWrapper">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/P3g2jfuZMts?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                  </div>
+                  <p>My major role in this project was to lead and manage the ideation process and design phase. As a result, I was later on responsible for the overall responsive layout and consistent look of the client side of our web App, HTML/CSS speaking. During the development phase, I also built the Home and Calendar views while contributing from time to time to my team mates tasks as we of course collaborate on mine. My personal biggest achievement was to actually implement a dynamic web application, which I have never done before. I learned a lot from my team mates and the programming concrete practice. I loved the challenge and eventually impressed myself!</p>
                   <div class="row">
                     <div class="col-md-12">
                       <ul class="list-inline">
