--- a/index.html
+++ b/index.html
@@ -500,12 +500,11 @@
                             <img width="130" src="img/portfolio/github-octocat.png" style="margin: 0px;">
                           </a>
                         </li>
-                        
                       </ul>
                     </div>
                   </div>
                   <ul class="list-inline">
-                    <li><h6>Date: <span>Spring 2017</span></h6></li>
+                    <li><h6>Date: <span>April and May 2017</span></h6></li>
                     <li><h6>Client: <span>KTH Course DH2642 - Interaction Programming and the Dynamic Web</span></h6></li>
                     <li><h6>Category: <span>UX, UI, Design Thinking, Web Programming</span></h6></li>
                   </ul>
@@ -539,9 +538,9 @@
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/instore.png" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Finish</li>
-                    <li>Category: Identity</li>
+                    <li><h6>Date: <span>October 2016</span></h6></li>
+                    <li><h6>Client: <span>KTH Course IC1007 - Human computer interaction: Principles and design</span></h6></li>
+                    <li><h6>Category: <span>UX, UI, Design Thinking</span></h6></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -573,9 +572,9 @@
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/health.png" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Lines</li>
-                    <li>Category: Branding</li>
+                    <li><h6>Date: <span>October and November 2015</span></h6></li>
+                    <li><h6>Client: <span>Sophia Antipolis Venture Capitalist</span></h6></li>
+                    <li><h6>Category: <span>UX, Design Thinking, Business Model, Startup Pitch</span></h6></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -606,10 +605,28 @@
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/groovybee.png" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <ul class="list-inline">
+                        <li class="list-inline-item"><h6>Read more on:</h6></li>
+                        <li class="list-inline-item">
+                          <a target="_blank" href="https://devpost.com/software/muvie">
+                            <img width="130" src="img/portfolio/devpost-logo.png" style="margin: 0px;">
+                          </a>
+                        </li>
+                        <li class="list-inline-item">
+                          <a target="_blank" href="https://github.com/HappyBee-Junction/muvie">
+                            <img width="130" src="img/portfolio/github-octocat.png" style="margin: 0px;">
+                          </a>
+                        </li>
+                        
+                      </ul>
+                    </div>
+                  </div>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Southwest</li>
-                    <li>Category: Website Design</li>
+                    <li><h6>Date: <span>January 2018</span></h6></li>
+                    <li><h6>Client: <span>Aalto Course CS-E4890 - Deep Learning</span></h6></li>
+                    <li><h6>Category: <span>Music, Deep Learning, LSTM neural networks</span></h6></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -641,9 +658,9 @@
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/skids.png" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Window</li>
-                    <li>Category: Photography</li>
+                    <li><h6>Date: <span>January to June 2017</span></h6></li>
+                    <li><h6>Client: <span>KTH Course ME2073 - Business Development Lab</span></h6></li>
+                    <li><h6>Category: <span>Lean Startup, Business Model, Startup Pitch</span></h6></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
